Bug 433847 - Kdenlive plays a little bit of audio at startup
Summary: Kdenlive plays a little bit of audio at startup
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-02 09:30 UTC by Larsen
Modified: 2021-09-01 10:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08.2
Sentry Crash Report:


Attachments
Project (445.97 KB, application/xml)
2021-03-14 18:22 UTC, Larsen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Larsen 2021-03-02 09:30:17 UTC
SUMMARY
When I start Kdenlive thus automatically opening the last used project, Kdenlive apparently starts playback for a very short time and some sound can be heard.

The playback marker on the timeline is not on any video or audio clip. I have moved the marker, moved a clip back and forth so I could save the project, and restarted Kdenlive. Still the same behaviour.

This happens when the video in the Project Monitor is displayed, but I don't see video playing. Though, this might just be too quick to see.


STEPS TO REPRODUCE
1. Load a project that has at least one video (with audio) clip on the timeline
2. Restart Kdenlive


OBSERVED RESULT
Sound of the video is heard.

EXPECTED RESULT
No sound.

SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 emohr 2021-03-14 16:14:05 UTC
So it's like the project starts playing without doing anything for a part of a second? Just audio or does video play as well? Please upload here the project file so we can have a look.
Comment 2 Larsen 2021-03-14 18:22:02 UTC
Yes, just audio.
Comment 3 Larsen 2021-03-14 18:22:25 UTC
Created attachment 136676 [details]
Project
Comment 4 Bug Janitor Service 2021-03-29 04:33:34 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 emohr 2021-03-29 19:07:42 UTC
I can confirm this on Win7. 

Set: open last project at startup. 

Step to reproduce:
- Put a MP3 file in the timeline.
- Put the playhead somewhere along the MP3 file.
- Save.
- Close/reopen Kdenlive.
- Some sound appears for ca. 1/10sec. 

(Project setting 1080p50)
Comment 6 Julius Künzel 2021-09-01 10:07:05 UTC
Git commit 86f1d76dcfc6e4bf777e9eecf188217ae3502f13 by Julius Künzel.
Committed on 01/09/2021 at 10:06.
Pushed by jlskuz into branch 'release/21.08'.

Fix noise when setting producer (e.g. when opening a project)

M  +3    -3    src/monitor/glwidget.cpp
M  +1    -1    src/monitor/glwidget.h
M  +3    -2    src/monitor/monitor.cpp
M  +1    -1    src/monitor/monitor.h
M  +6    -1    src/monitor/monitorproxy.cpp
M  +2    -1    src/monitor/monitorproxy.h

https://invent.kde.org/multimedia/kdenlive/commit/86f1d76dcfc6e4bf777e9eecf188217ae3502f13