Fix noise when setting producer (e.g. when opening a project)

BUG: 433847