src/monitor/monitor.cpp
@@ -2369,7 +2369,7 @@ void Monitor::panView(QPoint diff)
     }
 }
 
-void Monitor::processSeek(int pos)
+void Monitor::processSeek(int pos, bool noAudioScrub)
 {
     if (!slotActivateMonitor()) {
         return;
@@ -2377,7 +2377,8 @@ void Monitor::processSeek(int pos)
     if (KdenliveSettings::pauseonseek()) {
         pause();
     }
-    m_glMonitor->requestSeek(pos);
+    //noAudioScrub = noAudioScrub || pCore->window()->getCurrentTimeline()->controller()->trimmingActive();
+    m_glMonitor->requestSeek(pos, noAudioScrub);
     emit m_monitorManager->cleanMixer();
 }
 
