src/monitor/monitorproxy.h
@@ -81,6 +81,7 @@ public:
      * */
     int getPosition() const;
     Q_INVOKABLE bool setPosition(int pos);
+    bool setPositionAdvanced(int pos, bool noAudioScrub);
     Q_INVOKABLE void seek(int delta, uint modifiers);
     Q_INVOKABLE QColor thumbColor1() const;
     Q_INVOKABLE QColor thumbColor2() const;
@@ -122,7 +123,7 @@ public:
 signals:
     void positionChanged(int);
     void seekFinishedChanged();
-    void requestSeek(int pos);
+    void requestSeek(int pos, bool noAudioScrub);
     void zoneChanged();
     void saveZone(const QPoint zone);
     void saveZoneWithUndo(const QPoint, const QPoint&);
